--- a/src/trash_berry_canister_backend/Cargo.toml
+++ b/src/trash_berry_canister_backend/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2021"
 crate-type = ["cdylib"]
 
 [dependencies]
+ic-cdk = { version = "0.13" }
 candid = "0.10"
-ic-cdk = "0.13"
-ic-cdk-timers = "0.7" # Feel free to remove this dependency if you don't need timers
+ic-cdk-timers = "0.7"         # Feel free to remove this dependency if you don't need timers
+serde = "1.0.209"
+ic-cdk-macros = "0.16.0"
+sha2 = "0.10.8"
